worked on relativization etc
jaaaa!

--- a/details.tex
+++ b/details.tex
@@ -31,5 +31,124 @@ If Merge F has failed to spell out (even after backtracking), try to spawn a new
 \phantom{hi}
 
 
+\section{Gothic relative pronouns}
+
+adjectives
+
+so, these things are suffixes, they have to be
+
+following that.. blablabla
+
+
+
+\begin{table}[H]
+	\center
+	\caption {Relative pronouns in headless relatives in Gothic}
+		\begin{tabular}{cccc}
+		\toprule
+							& \ac{n}.\ac{sg} 	& \ac{m}.\ac{sg}	& \ac{f}.\ac{sg}  \\
+		 						\cmidrule{2-4}
+    \ac{nom} 	& þ-at-ei 	 			& s-a-ei 					& s-ō-ei					\\
+    \ac{acc}	& þ-at-ei    			& þ-an-ei  				& þ-ō-ei  				\\
+    \ac{dat} 	& þ-amm-ei 				& þ-amm-ei				& þ-izái-ei 			\\
+		\bottomrule
+    					& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}	& \ac{f}.\ac{pl}	\\
+						    \cmidrule{2-4}
+    \ac{nom} 	& þ-ō-ei					&	þ-ái-ei					&	þ-ōz-ei					\\
+    \ac{acc} 	& þ-ō-ei 					&	þ-anz-ei				&	þ-ōz-ei					\\
+    \ac{dat} 	& þ-áim-ei				&	þ-áim-ei 				&	þ-áim-ei 				\\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+Gothic relative pronouns are built from the demonstratives plus the complementizer \tit{ei}. Under \tit{ei}, two phonological processes take place. First, \tit{s} changes into \tit{z}, e.g. in \tit{þ-ōs} to \tit{þ-ōz-ei}. Second, on bisyllabic elements, final vowels disappear e.g. \tit{þ-ata} to \tit{þ-at-ei}.
+
+\begin{table}[H]
+	\center
+	\caption {Gothic demonstratives}
+		\begin{tabular}{cccc}
+		\toprule
+							& \ac{n}.\ac{sg} 	& \ac{m}.\ac{sg}	& \ac{f}.\ac{sg}  \\
+		 						\cmidrule{2-4}
+    \ac{nom} 	& þ-ata 	 			  & sa  			  		& sō		    			\\
+    \ac{acc}	& þ-ata    	   		& þ-ana  	  	 		& þ-ō     				\\
+    \ac{dat} 	& þ-amma 		   		& þ-amma  				& þ-i-z-ái  			\\
+		\bottomrule
+    					& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}	& \ac{f}.\ac{pl}	\\
+						    \cmidrule{2-4}
+    \ac{nom} 	& þ-ō		     			&	þ-ái   					&	þ-ōs	  				\\
+    \ac{acc} 	& þ-ō    					&	þ-ans   				&	þ-ōs	   				\\
+    \ac{dat} 	& þ-áim   				&	þ-áim    				&	þ-áim   				\\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+The suffixes that appear on demonstratives are also found on 3\tsc{sg} pronouns. The only difference is that the demonstratives attach to a \tit{þ(a?)}-stem and the pronouns attach to an \tit{i}-stem. This does not hold for all forms, some seem to be suppletive.
+
+\begin{table}[H]
+	\center
+	\caption {Gothic \tsc{3sg} pronouns}
+		\begin{tabular}{cccc}
+		\toprule
+							& \ac{n}.\ac{sg} 	& \ac{m}.\ac{sg}	& \ac{f}.\ac{sg}  \\
+		 						\cmidrule{2-4}
+    \ac{nom} 	& i-ta   	 			  & i-s  			  		& si		    			\\
+    \ac{acc}	& i-ta    	   		& i-na  	  	 		& i-ja     				\\
+    \ac{dat} 	& i-mma 		   		& i-mma  			   	& i-z-ái  	  		\\
+		\bottomrule
+    					& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}	& \ac{f}.\ac{pl}	\\
+						    \cmidrule{2-4}
+    \ac{nom} 	& i-ja  					&	eis    					&	i-jōs  					\\
+    \ac{acc} 	& i-ja   					&	i-ns    				&	i-jōs 					\\
+    \ac{dat} 	& i-m     				&	i-m      				&	i-m     				\\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+
+
+
+\begin{table}[H]
+	\center
+	\caption {Gothic \tit{giba} `gift' (\tsc{f})}
+		\begin{tabular}{cc}
+		\toprule
+							& \ac{sg}       \\
+		 						\cmidrule{2-2}
+    \ac{nom} 	& gib-a   	 		\\
+    \ac{acc}	& gib-a   	    \\
+    \ac{dat} 	& gib-ái  	 		\\
+		\bottomrule
+    					& \ac{pl}	      \\
+						    \cmidrule{2-2}
+    \ac{nom} 	& gib-ōs  			\\
+    \ac{acc} 	& gib-ōs   			\\
+    \ac{dat} 	& gib-ōm     		\\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+\begin{table}[H]
+	\center
+	\caption {Gothic \tit{dags} `day' (\tsc{m})}
+		\begin{tabular}{cc}
+		\toprule
+							& \ac{sg}       \\
+		 						\cmidrule{2-2}
+    \ac{nom} 	& dag-s   	 		\\
+    \ac{acc}	& dag-∅   	    \\
+    \ac{dat} 	& dag-a  	  		\\
+		\bottomrule
+    					& \ac{pl}	      \\
+						    \cmidrule{2-2}
+    \ac{nom} 	& dag-ōs  			\\
+    \ac{acc} 	& dag-ans   		\\
+    \ac{dat} 	& dag-am     		\\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
+
+
 
 \section{Derivations}
