--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -28,7 +28,7 @@ The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{n}.\ac{sg}' appears i
 Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
- {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{n}.\ac{sg} \-\ac{comp} lay\\
+ {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{n}.\ac{sg} -\ac{comp} lay\\
  `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
 
 Consider the example in \ref{ex:gothic-dat-acc-rep}, repeated from the introduction. In this example, the internal case is accusative and the external case is dative.
@@ -261,7 +261,7 @@ Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammat
     \node[] at (2,1) {\footnotesize{● Hungarian}};
     \node[] at (1.375,0) {\footnotesize{● Basque}};
   \end{tikzpicture}
-  \caption{\footnotesize{\posscitealt{bobaljik2006} actual schema}}
+  \caption{\posscitealt{bobaljik2006} actual schema}
   \label{fig:agr-def-dep-dat}
 \end{figure}
 
