--- a/presentation/GK-colloquium-2juni.tex
+++ b/presentation/GK-colloquium-2juni.tex
@@ -35,13 +35,17 @@ headless relatives in three Germanic languages:
 two aspects:
 \begin{itemize}
   \item one is stable crosslinguistically
-  \item one differs across languages
+  \item one differs crosslinguitically
 \end{itemize}
 %%
 
 %%The crosslinguistically stable one
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}
+
+\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+ Us visits\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
+ `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
 
 this is not something special
 
@@ -59,7 +63,6 @@ in morphology
 %%
 
 %%A reflex of morphology in syntax
-
 \begin{forest} boom
     [\ac{acc}P,name=accp
         [\ac{acc},name=acc]
@@ -73,10 +76,6 @@ in morphology
         ]
     ]
 \end{forest}
-
-
-
-
 
 
 \begin{table}[H]
@@ -121,44 +120,12 @@ in morphology
       \end{forest}\\
   \end{tabular}
 \end{table}
-
 %%
 
 
+%%The crosslinguistically differing one
 
-
-
-
-
-
-
-
-Focus of this talk
-
-\exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
-\ac{rel}.\ac{acc}.\ac{m}.\ac{sg} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
-`the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
-
-\exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
-and \ac{rel}.\ac{acc}.\ac{n}.\ac{sg} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
-`and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
-
-
-
-
-\exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
- I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} me nice is\scsub{[nom]}\\
- `I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}
-
-\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
- Us visits\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
- `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
-
-\exg. ih bibringu fona Juda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
- I educate\scsub{[acc]} about Juda \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
- `I educate the one who wanders through my mountains about Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
-
-
+internal and external
 
 \begin{table}[H]
 	\center
@@ -173,6 +140,57 @@ and \ac{rel}.\ac{acc}.\ac{n}.\ac{sg} -\ac{comp} is\scsub{[nom]} from Laodicea yo
 		\bottomrule
 		\end{tabular}
 \end{table}
+
+%%
+
+%%Gothic: both directions
+\exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
+\ac{rel}.\ac{acc}.\ac{m}.\ac{sg} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
+`the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
+
+\exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
+and \ac{rel}.\ac{acc}.\ac{n}.\ac{sg} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
+`and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
+%%
+
+%%Modern German: only internal
+\exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
+ I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} me nice is\scsub{[nom]}\\
+ `I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}
+
+\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+ Us visits\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
+ `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
+%%
+
+%%Old High German: only external
+\exg. ih bibringu fona Juda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
+ I educate\scsub{[acc]} about Juda \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
+ `I educate the one who wanders through my mountains about Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
+%%
+
+
+%%A reflex of morphology in syntax
+d
+d + ei
+wh
+
+but how?
+
+relative pronouns in headed relatives are different animals
+%%
+
+
+%% ohg is derivable from headed relatives
+headed relative
+
+ellipsis under identity
+%%
+
+
+%%
+
+
 
 
 
